[package]
name = "plc_adapter"
version = "2024.9.30"
edition = "2021"

[dependencies]
plc_proto = { path = "../plc_proto" }

chrono = { version = "0.4.38" }

prost = { version = "0.13.3" }
prost-types = { version = "0.13.3" }

redis = { version = "0.27.2", features = ["tokio-comp", "cluster"] }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }

structopt = { version = "0.3.26" }

time = { version = "0.3.36", features = ["formatting", "macros"] }

tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }

toml = { version = "0.8.19" }

tonic = { version = "0.12.3" }
tonic-types = { version = "0.12.3" }

tracing = { version = "0.1.40" }
tracing-appender = { version = "0.2.3" }
tracing-futures = { version = "0.2.5" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time", "json"] }


[build-dependencies]
regex = { version = "1.10.6" }
walkdir = { version = "2.5.0" }
