[package]
name = "plc_adapter"
version = "2024.10.1"
edition = "2021"

[dependencies]
plc_log = { path = "../plc_log" }
plc_proto = { path = "../plc_proto" }

local-ip-address = { version = "0.6.3" }

prost = { version = "0.13.3" }
prost-types = { version = "0.13.3" }

redis = { version = "0.27.2", features = ["tokio-comp", "cluster"] }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }

clap = { version = "4.5.18", features = ["derive"] }


tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }

toml = { version = "0.8.19" }

tonic = { version = "0.12.3" }
tonic-types = { version = "0.12.3" }

tracing = { version = "0.1.40" }


[build-dependencies]
plc_build = { path = "../plc_build" }
