[package]
name = "plc_client"
version = "2024.10.1"
edition = "2021"

[dependencies]
plc_log = { path = "../plc_log" }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }

clap = { version = "4.5.18", features = ["derive"] }

stdext = { version = "0.3.3" }

toml = { version = "0.8.19" }

tracing = { version = "0.1.40" }


[build-dependencies]
plc_build = { path = "../plc_build" }

