[package]
name = "plc_device"
version = "2024.9.29"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38" }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }

structopt = { version = "0.3.26" }

time = { version = "0.3.36", features = ["formatting", "macros"] }

toml = { version = "0.8.19" }

tracing = { version = "0.1.40" }
tracing-appender = { version = "0.2.3" }
tracing-futures = { version = "0.2.5" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time", "json"] }


