[package]
name = "plc_log"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38" }

time = { version = "0.3.36", features = ["formatting", "macros"] }

tracing = { version = "0.1.40" }
tracing-appender = { version = "0.2.3" }
tracing-futures = { version = "0.2.5" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time", "json"] }
