[package]
name = "plc_service"
version = "2024.9.26"
edition = "2021"

[dependencies]
plc_proto = { path = "../plc_proto" }

prost = { version = "0.12.6" }
prost-types = { version = "0.12.6" }

tonic = { version = "0.11.0" }

tracing = { version = "0.1.40" }
tracing-futures = { version = "0.2.5" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time", "json"] }


